# IOCPFramework

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test_run.bat
client/: CMakeLists.txt  client.sln  client.vcxproj  main.cpp
common/: CMakeLists.txt  Types.h  Types.ixx
dummy/: dummy.sln  dummy.vcxproj  main.cpp
engine/: CMakeLists.txt  main.cpp
engine/iocp/: placeholder.cpp
imgui-server/: readme.md
imgui-server/IMGUI_TEST/: IMGUI_TEST.sln
imgui-server/IMGUI_TEST/IMGUI_TEST/: IMGUI_TEST.vcxproj  IMGUI_TEST.vcxproj.filters  imgui.ini  main.cpp
server/: CMakeLists.txt  define.h  main.cpp  server.sln  server.vcxproj  server.vcxproj.filters  stdafx.h
server/Network/: ClientSession.cpp  ClientSession.h  IocpServer.cpp  IocpServer.h
server/core/network/: ClientSession.cpp  ClientSession.h  IocpServer.cpp
server/iocp/: Acceptor.cpp  Acceptor.ixx  IOCPCore.cpp  IOCPCore.h  IOCPCore.ixx  IOCPOverlapped.h  IOCPOverlapped.ixx  WorkerThreadPool.cpp  WorkerThreadPool.ixx
server_design/: index.html  server_design.html  server_design2.md
server_design/assets/: script.js  styles.css
server_design/server_design3/: p1_core_architecture.md  p2_network_optimization.md  p3_game_logic.md  p4_packet_data.md  p6_debugging_profiling.md  p7_modern_cpp.md
